--- a/src/main/resources/templates/customer-create.html
+++ b/src/main/resources/templates/customer-create.html
@@ -8,7 +8,7 @@
     <form action="/customers/" method="post" th:object="${customer}">
         <input type="text" th:field="*{firstName}" placeholder="First Name" required><br>
         <input type="text" th:field="*{lastName}" placeholder="Last Name" required><br>
-        <input type="date" th:field="*{dateOfBirth}" required><br>
+        <input type="date" th:field="*{dateOfBirth}" th:format="'yyyy-MM-dd'" required><br>
         <button type="submit">Submit</button>
     </form>
 </body>
